--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -9,6 +9,11 @@
   <div class="entry-content">
     <% if (item.excerpt && index){ %>
       <%- item.excerpt %>
+      <% if (theme.excerpt_link){ %>
+        <p class="article-more-link">
+          <a href="<%- url_for(item.path) %>#more"><%= __('read_more') %>...</a>
+        </p>
+      <% } %>
     <% } else { %>
       <%- item.content %>
     <% } %>
