--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -16,17 +16,16 @@
   %>
   <title><%= title.join(' | ') %></title>
   <% if (config.author){ %><meta name="author" content="<%= config.author %>"><% } %>
-
-  <% if (page.description){ %>
-  <meta name="description" content="<%= page.description %>">
-  <% } else if (config.description){ %>
-  <meta name="description" content="<%= config.description %>">
-  <% } else if (page.excerpt){ %>
-  <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
-  <% } else if (page.content){ %>
-  <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
-  <% } %>
   <% if (page.keywords){ %><meta name="keywords" content="<%= page.keywords %>"><% } %>
+
+  <% if (!is_home()){ %><meta property="article:author" content="<%- theme.facebook %>"><% } %>
+
+  <%- open_graph({
+    type: is_home() ? 'website' : 'article',
+    image: is_home() ? url_for(theme.site_image, {absolute:true}) : '',
+    twitter_id: theme.twitter,
+    google_plus: theme.google_plus,
+    fb_admins: theme.facebook}) %>
 
   <link rel="alternate" href="<% if (theme.rss){ %><%- theme.rss %><% } else { %><%- config.root %>atom.xml<% } %>" title="<%= config.title %>" type="application/atom+xml">
   <link rel="stylesheet" href="<%- config.root %>css/style.css" media="screen" type="text/css">
