--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -21,6 +21,7 @@
     <footer class="meta">
       <%- partial('post/category') %>
       <%- partial('post/tag') %>
+      <%- partial('post/share') %>
       <% if (config.disqus_shortname && item.comment){ %>
         <a href="<%- item.permalink %>#disqus_thread" class="comment"><%= __('comment') %></a>
       <% } %>
