master: Add direct facebook and google plus sharing buttons on article

--- a/layout/_partial/post/share.ejs
+++ b/layout/_partial/post/share.ejs
@@ -16,3 +16,16 @@
   </div>
   <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js<% if (theme.addthis.pubid){ %>#pubid=<%= theme.addthis.pubid %><% } %>"></script>
 <% } %>
+
+<% if (!is_home() && theme.sharing.facebook || theme.sharing.google_plus){ %>
+  <div class="sharing">
+
+    <% if (theme.sharing.google_plus){ %>
+      <div class="g-plusone" data-size="medium"></div>
+    <% } %>
+
+    <% if (theme.sharing.facebook){ %>
+      <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+    <% } %>
+  </div>
+<% } %>
