--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -190,6 +190,7 @@ article
     .sharing
       border-top 1px solid lighten(color-border, 10%)
       padding-top 15px
+      min-height 46px
       iframe
         margin-top 0
 
