master: Added Blog title

--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -1,5 +1,5 @@
 // Color
-color-background = rgb(39, 174, 85)
+color-background = rgb(27, 129, 62)
 color-font = #333
 color-meta = #999
 color-border = #ccc
@@ -13,8 +13,10 @@ font-main = "Helvetica Neue", "Helvetica", Arial, sans-serif
 font-serif = "Georgia", serif
 font-mono = Monaco, Menlo, Consolas, Courier New, monospace
 font-title = "Pontano Sans", Helvetica Neue, Helvetica, Arial, sans-serif
+font-main-title = Cinzel, Helvetica Neue, Helvetica, Arial, sans-serif
 
 @import url("http://fonts.googleapis.com/css?family=Pontano+Sans");
+@import url("http://fonts.googleapis.com/css?family=Cinzel:400");
 
 font-icon = FontAwesome
 font-icon-path = 'font/fontawesome-webfont'
