--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,8 +1,17 @@
-nav-height = 64 + 3*2px
+nav-height = 82 + 3*2px
 
 #header
-  height nav-height
-  padding 50px 0
+  padding 25px 0
+  h1
+    text-align center
+    color #fff
+    font 5em font-main-title
+    letter-spacing 0.2em
+    border-bottom 1px solid #fff
+    border-top 0
+    border-image linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%) 1
+    -moz-border-image -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%) 1
+    -o-border-image -o-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%) 1
   nav
     font 1.5em font-title
     line-height nav-height
