--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -18,14 +18,14 @@
   <% if (config.author){ %><meta name="author" content="<%= config.author %>"><% } %>
   <% if (page.keywords){ %><meta name="keywords" content="<%= page.keywords %>"><% } %>
 
-  <% if (!is_home()){ %><meta property="article:author" content="<%- theme.facebook %>"><% } %>
+  <% if (!is_home()){ %><meta property="article:author" content="<%- theme.facebook_author %>"><% } %>
 
   <%- open_graph({
     type: is_home() ? 'website' : 'article',
     image: is_home() ? url_for(theme.site_image, {absolute:true}) : '',
     twitter_id: theme.twitter,
     google_plus: theme.google_plus,
-    fb_admins: theme.facebook}) %>
+    fb_admins: theme.facebook_author}) %>
 
   <link rel="alternate" href="<% if (theme.rss){ %><%- theme.rss %><% } else { %><%- config.root %>atom.xml<% } %>" title="<%= config.title %>" type="application/atom+xml">
   <link rel="stylesheet" href="<%- config.root %>css/style.css" media="screen" type="text/css">
