--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -9,11 +9,14 @@
       text-decoration underline
 
   .social
+    width 220px
+    .fb-like
+      float left
     a
       display inline-block
       opacity 0.7
       width 16px
-      height 16px
+      height 24px
       margin-left 10px
       float left
       text-indent -9999px
