master: Add credits section to posts

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -16,6 +16,9 @@
       <% } %>
     <% } else { %>
       <%- item.content %>
+      <% if (item.credits) {%>
+        <%- partial('post/credits') %>
+      <% } %>
     <% } %>
     <% if (item.layout != 'page'){ %>
     <footer class="meta">
