--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -194,6 +194,11 @@ article
       iframe
         margin-top 0
 
+    .credits
+      text-align right
+      font-size 13px
+      padding-top 40px
+
 .post
   &:before
     content ""
