--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -187,6 +187,10 @@ article
         width 100%
         height 100%
 
+    .image-left
+      float left
+      padding 6px 22px 14px 0
+
     .sharing
       border-top 1px solid lighten(color-border, 10%)
       padding-top 15px
