master: Style revamp targetting readability: changed font, bigger size, etc.

--- a/source/css/_base/layout.styl
+++ b/source/css/_base/layout.styl
@@ -4,17 +4,16 @@
 
 body
   background color-background
-  font 300 14px font-main
-  text-shadow 0 0 1px transparent
+  font 16px font-main
 
 h1
   font-size 2em
 
 h2
-  font-size 1.6em
+  font-size 1.3em
 
 h3
-  font-size 1.3em
+  font-size 1.18em
 
 a
   color color-main01
