--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -3,20 +3,21 @@ color-background = rgb(27, 129, 62)
 color-font = #333
 color-meta = #999
 color-border = #ccc
-color-main01 = rgb(157, 97, 207)
+color-main01 = rgb(29, 149, 49)
 color-main02 = rgb(40, 20, 105)
 color-main03 = rgb(0, 150, 240)
 color-main04 = rgb(0, 26, 77)
 
 // Font
-font-main = "Helvetica Neue", "Helvetica", Arial, sans-serif
+font-main = "Open Sans", "Helvetica Neue", "Helvetica", Arial, sans-serif
 font-serif = "Georgia", serif
 font-mono = Monaco, Menlo, Consolas, Courier New, monospace
-font-title = "Pontano Sans", Helvetica Neue, Helvetica, Arial, sans-serif
-font-main-title = Cinzel, Helvetica Neue, Helvetica, Arial, sans-serif
+font-title = "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif
+font-main-title = Cinzel, "Georgia", serif
 
-@import url("http://fonts.googleapis.com/css?family=Pontano+Sans");
 @import url("http://fonts.googleapis.com/css?family=Cinzel:400");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,800italic,400,600,700,800");
+
 
 font-icon = FontAwesome
 font-icon-path = 'font/fontawesome-webfont'
