--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -1,4 +1,5 @@
-meta-width = 120px
+meta-width = 144px
+text-font-size = 18px
 
 article
   background #fff
@@ -14,7 +15,7 @@ article
     padding 15px 20px
     position relative
     .title
-      font-weight normal
+      font-weight bold
       line-height 1.1
       a
         color color-font
@@ -41,7 +42,8 @@ article
           content " / "
 
   .entry-content
-    line-height 1.6
+    font-size text-font-size
+    line-height 1.44
     padding 15px 20px 15px
     margin-top -15px
     p, blockquote, ul, ol, dl, table, iframe, h1, h2, .video-container, .sharing
@@ -59,19 +61,20 @@ article
       font-style italic
 
     a
+      font-weight bold
       &:hover
         text-decoration underline
 
     h1, h2, h3, h4, h5, h6
       font-family font-title
-      font-weight normal
+      font-weight bold
       line-height 1.1
 
     h1, h2
-      border-top 1px solid lighten(color-border, 10%)
-      padding-top 15px
+      margin-top 44px
 
     h3, h4, h5, h6
+      font-weight 600
       margin-top 25px
 
     img, video
@@ -232,7 +235,7 @@ article
 
     .meta
       color color-meta
-      font-size 0.9em
+      font-size 0.77em
       position absolute
       top 10px
       left 0 - meta-width - 20px
@@ -240,6 +243,7 @@ article
       z-index 1
       a
         color color-meta
+        font-weight normal
         display block
         line-height 1.6em
         &:hover
