--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,7 +1,7 @@
 nav-height = 82 + 3*2px
 
 #header
-  padding 25px 0
+  padding 25px 0 12px
   h1
     text-align center
     color #fff
@@ -13,7 +13,7 @@ nav-height = 82 + 3*2px
     -moz-border-image -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%) 1
     -o-border-image -o-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%) 1
   nav
-    font 1.5em font-title
+    font 1.3em font-title
     line-height nav-height
     ul
       list-style none
