--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -7,6 +7,7 @@ nav-height = 82 + 3*2px
     color #fff
     font 5em font-main-title
     letter-spacing 0.2em
+    cursor default
     border-bottom 1px solid #fff
     border-top 0
     border-image linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%) 1
