master: Improve header with curved gradient separator below title

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,18 +1,18 @@
 nav-height = 82 + 3*2px
 
 #header
-  padding 25px 0 12px
+  cursor pointer
+  padding 15px 0 5px
   h1
     text-align center
     color #fff
     font 5em font-main-title
     letter-spacing 0.2em
-    cursor default
-    border-bottom 1px solid #fff
-    border-top 0
-    border-image linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%) 1
-    -moz-border-image -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%) 1
-    -o-border-image -o-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%) 1
+  .horizon
+    background-image url('/blog/images/earth-shining.png');
+    width 1000px
+    height 153px
+    margin 4px 0 -132px
   nav
     font 1.3em font-title
     line-height nav-height
