--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -194,6 +194,16 @@ article
       float left
       padding 6px 22px 14px 0
 
+    .image-right
+      float right
+      padding 6px 0 14px 22px
+
+    .image-center
+      display block
+      margin-left auto
+      margin-right auto
+      padding 25px 0 40px
+
     .sharing
       border-top 1px solid lighten(color-border, 10%)
       padding-top 15px
