--- a/layout/_partial/post/date.ejs
+++ b/layout/_partial/post/date.ejs
@@ -1,3 +1,3 @@
 <time datetime="<%= item.date.toDate().toISOString() %>">
-  <span class="day"><%= item.date.format('D') %></span><span class="month"><%= item.date.format('MMM') %></span>
+  <span class="day"><%= item.date.format('D') %></span><span class="month"><%= item.date.format('MMM') %></span><span class="year"><%= item.date.format('YYYY') %></span>
 </time>
